--- a/error-pages/404.html
+++ b/error-pages/404.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <title>404 - Page not found</title>
+  <head>
+    <title>404 - Not found</title>
     <style>
-        html {
-            color-scheme: light dark;
-        }
+      html {
+        color-scheme: light dark;
+      }
 
-        body {
-            width: 35em;
-            margin: 0 auto;
-            font-family: Tahoma, Verdana, Arial, sans-serif;
-        }
+      body {
+        width: 35em;
+        margin: 0 auto;
+        font-family: Tahoma, Verdana, Arial, sans-serif;
+      }
     </style>
-</head>
+  </head>
 
-<body>
-    <h1>404 - Page not found</h1>
-</body>
-
+  <body>
+    <h1>404 - Not found</h1>
+  </body>
 </html>
