--- a/error-pages/50x.html
+++ b/error-pages/50x.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>50x - Server Error</title>
+    <title>50x - Internal server error</title>
     <style>
       html {
         color-scheme: light dark;
@@ -16,15 +16,6 @@
   </head>
 
   <body>
-    <h1>An error occurred.</h1>
-    <p>
-      Sorry, the page you are looking for is currently unavailable.<br />
-      Please try again later.
-    </p>
-    <p>
-      If you are the system administrator of this resource then you should check
-      the error log for details.
-    </p>
-    <p><em>Faithfully yours, nginx.</em></p>
+    <h1>50x - Internal server error.</h1>
   </body>
 </html>
